[package]
name = "captis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.2", default-features = false, features = ["bmp"]}

[target.'cfg(target_os = "windows")'.dependencies]
winapi = {version = "0.3.9", features = ["std", "winuser", "windef", "minwindef", "wingdi"]}

[profile.release]
lto = "fat"
strip = "symbols"
