[package]
name = "captis"
version = "0.1.0"
rust-version = "1.56"
edition = "2021"
authors = ["selyatinismet@gmail.com"]
description = "A Screen capturing library built for Linux, Windows and MacOS."
readme = "README.md"
homepage = "https://github.com/crewnew/captis"
license = "MIT"
keywords = ["screen", "capture"]
categories = ["computer-vision", "multimedia::images"]
documentation = "https://docs.rs/captis"

[dependencies]
image = { version = "0.24.2", default-features = false}

[target.'cfg(target_os = "windows")'.dependencies]
winapi = {version = "0.3.9", features = ["std", "winuser", "windef", "minwindef", "wingdi"]}

[profile.release]
lto = "fat"
strip = "symbols"
